force-app/main/default/objects/Escalation_Request__c/Escalation_Request__c.object-meta.xml
<CustomObject>
    <label>Critical Account Request</label>
    <nameField>
        <displayFormat>ESC-{00000000}</displayFormat>
        <label>Escalation Number#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Account Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>