force-app/main/default/objects/Escalation_Request__c/fields/Are_any_other_vendors_involved__c.field-meta.xml
<CustomField>
    <fullName>Are_any_other_vendors_involved__c</fullName>
    <label>Are any other vendors involved</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>