force-app/main/default/objects/Escalation_Request__c/fields/Description_of_events__c.field-meta.xml
<CustomField>
    <fullName>Description_of_events__c</fullName>
    <label>Description of events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>