force-app/main/default/objects/Escalation_Request__c/fields/Desired_outcome_of_escalation__c.field-meta.xml
<CustomField>
    <fullName>Desired_outcome_of_escalation__c</fullName>
    <label>Desired outcome of escalation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>