force-app/main/default/objects/Escalation_Request__c/fields/Escalation_Severity__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Severity__c</fullName>
    <label>Escalation Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E0</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>