force-app/main/default/objects/Escalation_Request__c/fields/Factors_involved_leading_to_escalation__c.field-meta.xml
<CustomField>
    <fullName>Factors_involved_leading_to_escalation__c</fullName>
    <label>Factors involved leading to escalation</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial loss impacting the customer</fullName>
            </value>
            <value>
                <fullName>Customer&apos;s business impact - Production system down</fullName>
            </value>
            <value>
                <fullName>Potential Data Loss/Corruption</fullName>
            </value>
            <value>
                <fullName>Revenue Impact to Rubrik - Provide link to Sales force Opportunity</fullName>
            </value>
            <value>
                <fullName>Threat removal from account</fullName>
            </value>
            <value>
                <fullName>Multiple customers impacted</fullName>
            </value>
            <value>
                <fullName>Customer or Account team are dissatisfied with support progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>