force-app/main/default/objects/Escalation_Request__c/fields/Product_Line_involved_in_the_escalation__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_involved_in_the_escalation__c</fullName>
    <label>Product Line involved in the escalation</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDM on Premise</fullName>
            </value>
            <value>
                <fullName>CDM Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
            <value>
                <fullName>Polaris Radar</fullName>
            </value>
            <value>
                <fullName>Polaris Sonar</fullName>
            </value>
            <value>
                <fullName>Mosaic/DatosIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>