force-app/main/default/objects/Escalation_Request__c/fields/Reporting_User__c.field-meta.xml
<CustomField>
    <fullName>Reporting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>