force-app/main/default/objects/Escalation_Request__c/fields/Rubrik_contacts_who_should_be_involved__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_contacts_who_should_be_involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubrik contacts who should be involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Escalation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>