force-app/main/default/objects/Escalation_Request__c/listViews/CEM_Queue_Escalation_Request.listView-meta.xml
<ListView>
    <fullName>CEM_Queue_Escalation_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Escalation Queue</label>
    <queue>CEM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>